--- a/client/src/components/Home/Home.module.css
+++ b/client/src/components/Home/Home.module.css
@@ -10,23 +10,40 @@
       ". . ."
       ". . ."
       ". . ."; 
-      /* margin: 10px; */
-      margin-left: 30px;
+      margin-top: 40px;
  
 }
+
+.barYbutton{
+
+  display: flex;
+  flex-direction: row;
+  /* position: relative; */
+  /* margin-top: 90px; */
+}
 .bar{
-    border: 2px solid #77827c;
-    border-radius: 5px;
-    background-color: #00000036;
+  background-color: #00000036;
+    border: 2px solid #29154e;
+    border-radius: 15px;
     padding: 5px;
     width: 400px;
+    height: 35px;
     margin: 8px;
     box-sizing: border-box;
     color: #000000;
     text-align: center;
+    margin-top: 20px;
+    margin-left: 230px;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5);
+    
+}
+.bar:focus {
+  color: #29154e;
 }
 .center{
     text-align: center;
+    display: flex;
+    flex-direction: row;
 
 }
 
@@ -42,60 +59,24 @@
 
 
 
+.pagination {
+  display: inline-block;
+}
 
-/* .dropbtn {
-    background-color: #4CAF50;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-  } */
-  
-  /* The container <div> - needed to position the dropdown content */
-  /* .dropdown {
-    position: relative;
-    display: inline-block;
-  }
-   */
-  /* Dropdown Content (Hidden by Default) */
-  /* .dropdownContent {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-  } */
-  
-  /* Links inside the dropdown */
-  /* .dropdownContent .btnLink {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-  } */
-  
-  /* Change color of dropdown links on hover */
-  /* .dropdownContent .btnLink:hover {background-color: #f1f1f1} */
-  
-  /* Show the dropdown menu on hover */
-  /* .dropdown:hover .dropdownContent {
-    display: block;
-  } */
-  
-  /* Change the background color of the dropdown button when the dropdown content is shown */
-  /* .dropdown:hover .dropbtn {
-    background-color: #3e8e41;
-  } */
+.pagination .aa {
+  color: black;
+  float: left;
+  padding: 8px 16px;
+  text-decoration: none;
+  transition: background-color .3s;
+  border: 1px solid #ddd;
+  margin: 0 4px;
+}
 
+.pagination .aa.active {
+  background-color: #4CAF50;
+  color: white;
+  border: 1px solid #4CAF50;
+}
 
-
-
-
-
-
-
-/*                DROPDOWN BUTTON !!!!!!!!11              **/
-
-
+.pagination .aa:hover:not(.active) {background-color: #ddd;}
