--- a/client/src/components/Home/button.scss
+++ b/client/src/components/Home/button.scss
@@ -3,8 +3,15 @@
     margin-top: 6px;
 } 
 
+.multiselect{
+   color: rgb(0, 0, 0);
+   background-color: rgb(142, 117, 231);
+   width: 200px;
 
-.containerr * {
+}
+
+
+.containerr  {                   //SI HAY ALGUN PROBLEMA PONER UN * ANTES DE ABRIR LLAVES
     margin-top:0;
     padding:0;
     position: absolute;
@@ -116,6 +123,7 @@
     opacity: 1;
  }
  
+
 
 
 
